--- a/pychronia_common/static/MetalRadiance/scss/_standard_content.scss
+++ b/pychronia_common/static/MetalRadiance/scss/_standard_content.scss
@@ -107,6 +107,9 @@ h4 {
 }
 
 
+em {
+  font-style: italic;
+}
 
 b, strong {
     font-weight: bolder;
